<resources>
    <string name="app_name">ShiyiquanEvent</string>
    <string name="app_name2">QuanEvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_me">about_me</string>
    <string name="large_text">
        "来自北京市十一学校高二学部的\n学生开发者——AD1024\n"
        "QQ:1797609811 E-Mail:yoyo991214@126.com\n"
        "欢迎对本App提出建设性建议及意见\n\n"
        "最后打个广告:欢迎加入HCC社团!\n\n"
        "Copyright &#169; 2016 AD1024 And \n HCC Computer Community\n All Rights Reserved."
    </string>
    <string name="open_source_info">
        "Copyright &#169; 2016 AD1024

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n\n"

        "DiskLruCache\n"
        "Copyright 2012 Jake Wharton
Copyright 2011 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n\n"
        "Fresco-0.5.2\n"
        "BSD License"

For Fresco software

Copyright &#169; 2015-present, Facebook, Inc. All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted provided that the following conditions are met:

 * Redistributions of source code must retain the above copyright notice, this
   list of conditions and the following disclaimer.

 * Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation
   and/or other materials provided with the distribution.

 * Neither the name Facebook nor the names of its contributors may be used to
   endorse or promote products derived from this software without specific
   prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\n\n"

        "FloatingActionMenu\n\n"
        "Copyright 2016 Nightonke

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n\n"

        "Universal-Image-Loader"
        "Copyright &#169; AD1024

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License."

        "Volley\n"
        "Copyright &#169; 2016 Google
        Original Optimization By AD1024

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License."


    </string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">ShiYiQuan</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_aacc">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preferences_front_light_on">...</string>
    <string name="activity_settings_skip_splash">Skip Splash Screen</string>
    <string name="setting_clear_pic_cache">Clear Picture Cache</string>
    <string name="setting_clear_event_cache">Clear Offline Event Information(Unrecommended)</string>
    <string name="title_activity_club_info_detail">ClubInfoDetailActivity</string>
    <string name="faved_event_no_fav">No Favorite Event</string>
    <string name="content_update_info">
        "
        新特性：
        * 通过GET请求从服务器获取JSON渲染社团主页
        * 转到十一圈界面中隐藏网页中的导航栏
        * 通过点击活动详情里社团头像可以去往社团主页
        * 扫描社团名片二维码可以直接去往社团主页
        * 社团广场中，进入社团详细信息页面之后点击主页按钮可以前往社团主页

        修复：
        * 因混淆代码导致Scanner中选择照片打不开的问题
        * Scanner有时扫描出错的问题
        "
    </string>
    <string name="setting_high_quality_avatar_indicator">Show High Quality Avatar</string>
    <string name="setting_enable_auto_update_check">Check Update When StartUp</string>
    <string name="title_activity_open_source_info">Open Source Information</string>
    <string name="preferences_front_light_auto">...</string>
    <string name="preferences_front_light_off">...</string>
    <string name="club_square_categories">Club Categories:</string>
    <string name="search_result_null">No Result</string>
    <string name="login_user_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="club_message">Club Operation</string>
    <string name="user_homepage">My HomePage</string>
    <string name="user_clubs">My Clubs</string>
    <string name="add_club_activity">Add Event</string>
    <string name="open_search">Search</string>
    <string name="shiyiquan_homepage">ShiYiQuan Home</string>
    <string name="qrscanner_indicator">Put QR in to Scan</string>
    <string name="qrscanner_openled">TurnOn LED</string>
    <string name="qrscanner_select_photo">Select Photo From Galary</string>
    <string name="check_update">Check Update</string>
    <string name="app_feature_indicator">Version Feature</string>
    <string name="user_logout">LogOut</string>
    <string name="qr_visit">Scan QR to Visit Club Homepage</string>
    <string name="update_download_prompt">Download New version NOW ?</string>
    <string name="update_current_version">CurrentVersion:</string>
    <string name="update_new_version">New Version:</string>
    <string name="my_club_indicator">My Clubs</string>
    <string name="search_clubs">Search Clubs</string>
    <string name="club_follow">Followers:</string>
    <string name="event_duration">Duration:</string>
    <string name="event_location_indicator">Location:</string>
    <string name="menu_goto_shiyiquan">Go To Shiyiquan</string>
    <string name="menu_my_fav">My Favorite Events</string>
    <string name="menu_scanner">QR Scanner</string>
    <string name="menu_clubsquare">Club Square</string>
    <string name="menu_moments">Moments</string>
    <string name="menu_aboutme">About Me</string>
    <string name="menu_goto_wall">Go To Club Wall</string>
    <string name="menu_to_go_auth">Go to Auth List</string>
    <string name="go_to_event_square">View All Events</string>
</resources>