<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:padding="10sp"
        app:cardElevation="5sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5sp">

                <TextView
                    android:id="@+id/square_event_list_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EventName"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5sp"
                    android:paddingTop="4sp">

                    <TextView
                        android:id="@+id/square_event_list_item_sponsor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sponser" />

                    <TextView
                        android:id="@+id/square_event_list_item_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5sp"
                        android:text="DateHere" />

                    <TextView
                        android:id="@+id/square_event_list_item_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5sp"
                        android:text="TimeHere" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_on_black_18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_location_indicator" />

                    <TextView
                        android:id="@+id/square_event_list_item_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LocationHere" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="4sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_access_time_pink_500_18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_duration" />

                    <TextView
                        android:id="@+id/square_event_list_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DurationHere" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_follower" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/club_follow" />

                    <TextView
                        android:id="@+id/square_event_list_item_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="13"
                        android:text="Followers" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>